--amend --no-edit

--- a/src/app/game-window/game-window.component.sass
+++ b/src/app/game-window/game-window.component.sass
@@ -38,6 +38,11 @@
     background-color: #99ff99
     width: 8vh
     height: 7vh
+    transition: ease-out 0.15s
+
+.singleSquare:hover
+    cursor: pointer
+    background-color: #1795ac
 
 .wholeBattlefield
     display: flex
